--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title">Títol</string>
     <string name="buttonLogcat">Botó Logcat</string>
     <string name="buttonToast">Botó toast</string>
+    <string name="imageText">Image</string>
 </resources>
